# novel_rater

./: .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: api.py  main.py  runner.py
pages/: novel_script.py
scorer/: allure_parser.py  config.py  db_operator.py  log.py
tests/: conftest.py  test_novel.py
