[tool.poetry]
name = "novel-rater"
version = "0.1.0"
description = ""
authors = ["朱毅鑫 <zhuyx1022@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# 填入你项目所需依赖，例如：
# requests = "^2.31.0"
python = ">=3.9"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
