[tool.poetry]
name = "novel-rater"
version = "0.1.0"
description = ""
authors = ["朱毅鑫 <zhuyx1022@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
# 填入你项目所需依赖，例如：
# requests = "^2.31.0"
python = ">=3.9"
pytest = "^8.0"
allure-pytest = "^2.13.2"
chardet = "^5.2.0"
pymongo = "^4.11.3"
python-dotenv = "^1.1.0"
requests = "^2.32.4"
fastapi = "^0.115.12"
uvicorn = "^0.34.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
